# NewDicomToNrrdConverter

./: CMakeLists.txt  dcmtkPatchScript.cmake
DWIConvert/: CMakeLists.txt  DCMTKFileReader.h  DWIConvert.cxx  DWIConvert.xml  DWIConvertUtils.h  FSLToNRRD.cxx  FSLToNrrd.cxx  NrrdToFSL.cxx  itkDCMTKFileReader.cxx  itkDCMTKFileReader.h  itkDCMTKImageIO.cxx  itkDCMTKImageIO.h  itkDCMTKSeriesFileNames.cxx
DWIConvert/ExtendedTesting/: CMakeLists.txt  DWISimpleCompare.cxx  FSLTextFileCompare.cxx  FSLToNrrdTest.cmake
DicomToNrrdConverter/: CMakeLists.txt  DCMTKFileReader.h  DicomFileConverter.h  DicomToNrrdConverter.cxx  DicomToNrrdConverter.xml  FSLToNRRD.cxx  FSLToNrrd.xml  TestAddDictEntry.cxx  dwi.cxx
DicomToNrrdConverter/ExtendedTesting/: CMakeLists.txt  DWISimpleCompare.cxx  DWISimpleCompare.xml  DicomToNrrdDWICompareTest.cmake  FSLToNrrdTest.cmake
DicomToNrrdConverter/ExtendedTesting/keys/: GeSignaHDx.bval.md5  GeSignaHDx.bvec.md5  GeSignaHDx.nii.gz.md5
DicomToNrrdConverter/Testing/: CMakeLists.txt
